--- a/djangomission/requirements.txt
+++ b/djangomission/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
+certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ccvvj6f93d/croots/recipe/certifi_1663615678215/work/certifi
 Django==3.1.14
+djangorestframework==3.13.1
 pytz==2022.2.1
 sqlparse==0.4.2
-djangorestframework==3.13.1
